--- a/src/App.css
+++ b/src/App.css
@@ -49,14 +49,11 @@
   margin-right: 5px;
 }
 
-.w-50 {
-  width: 50%;
-}
+.w-50 {width: 50%;}
 
-.w-75 {
-  width: 75%;
-}
+.w-75 {width: 75%;}
 
+.w-100 {width: 100%;}
 .logo {
   text-align: -webkit-center;
 }
